<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:paddingLeft="@dimen/abc_action_bar_default_height_material"
        android:text="@string/beginText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/RiddleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:paddingLeft="@dimen/abc_action_bar_default_height_material"
        android:paddingRight="@dimen/abc_action_bar_default_height_material"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/hintButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RiddleText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:text="@string/hintButtonText" />

    <TextView
        android:id="@+id/hintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hintButton"
        android:layout_below="@+id/hintButton"
        android:layout_marginTop="18dp"
        android:text="TextView" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hintText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/SubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/submitButtonString" />

</RelativeLayout>
